--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.88.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "browser-image-compression": "^2.0.2",
     "dotenv": "^17.2.3",
     "firebase": "^12.7.0",
     "lucide-react": "^0.561.0",
