--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.561.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.5.6",
     "react-helmet-async": "^2.0.5",
     "react-is": "^19.2.3",
     "react-router-dom": "^7.10.1",
