--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
-    "vite": "^7.3.0"
+    "vite": "^7.3.0",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
