--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,40 @@
   "rewrites": [
     {
       "source": "/delhivery-api/:path*",
-      "destination": "https://track.delhivery.com/:path*"
+      "destination": "https://delhivery-proxy.vercel.app/api/:path*"
     },
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)\\.(png|jpg|jpeg|gif|svg|ico|webp)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+       "source": "/(.*)\\.(css|js|woff2|woff|ttf)",
+       "headers": [
+         {
+           "key": "Cache-Control",
+           "value": "public, max-age=31536000, immutable"
+         }
+       ]
     }
   ]
 }
