--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browser-image-compression": "^2.0.2",
     "dotenv": "^17.2.3",
     "firebase": "^12.7.0",
+    "html2pdf.js": "^0.14.0",
     "lucide-react": "^0.561.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
